two test progress routes added
