# api.yaml
@@ -21,7 +21,7 @@ schemes: [http, https]
   #   name: Authorization
   #   in: header
 
-#host: 139.59.84.213:3000
+#host: localhost:3000
 host: feeta.thelattice.org
 basePath: /api
 paths:
@@ -697,10 +697,58 @@ paths:
       parameters:
         - in: query
           name: project_id
+          required: true
           type: string
           description: project id of the
         - in: query
           name: snapshot_date
+          required: true
+          type: string
+          description: snapshot date of project
+      responses:
+        200: 
+          description: successfull response
+          schema: 
+            type: string
+
+  /progress/durationBased:
+    get:
+      summary: find progress based on duration
+      description: find progress of a project based on task durations
+      tags:
+        - test
+      parameters:
+        - in: query
+          name: project_id
+          required: true
+          type: string
+          description: project id of the
+        - in: query
+          name: snapshot_date
+          required: true
+          type: string
+          description: snapshot date of project
+      responses:
+        200: 
+          description: successfull response
+          schema: 
+            type: string
+
+  /progress/effortBased:
+    get:
+      summary: find progress based on duration
+      description: find progress of a project based on task durations
+      tags:
+        - test
+      parameters:
+        - in: query
+          name: project_id
+          required: true
+          type: string
+          description: project id of the
+        - in: query
+          name: snapshot_date
+          required: true
           type: string
           description: snapshot date of project
       responses:
