# routes/index.js
@@ -25,5 +25,8 @@ router.delete('/snapshot', projectSummaryController.deleteSnapshot);
 router.get('/all-projects', projectSummaryController.allProjects);
 router.get('/task-contributors', projectSummaryController.taskContributors);
 
+//** Test Routes */
+router.get('/progress/durationBased', projectSummaryController.progressBasedDuration);
+router.get('/progress/effortBased', projectSummaryController.progressBasedEffort);
 
 module.exports = router;
